--- a/view/TeilFrame.form
+++ b/view/TeilFrame.form
@@ -187,7 +187,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblIdentnummer">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Identnummer:"/>
+        <Property name="text" type="java.lang.String" value="Teil ID:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txfIdentnummer">
