Eingabefeld Teil ID eingeben beim TeilebestandErweitern gelöscht

--- a/view/TeilFrame.form
+++ b/view/TeilFrame.form
@@ -26,36 +26,37 @@
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="256" max="-2" attributes="0"/>
+                      <Component id="btnanlegen" min="-2" pref="142" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblNeuesTeilAnlegen" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator1" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="btnanlegen" min="-2" pref="142" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblZeichnungsnummer" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblMaterialGruppe" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblTyp" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblBezeichnung" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblIdentnummer" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblPreisInEuro" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblGrößeVE" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="lblZeichnungsnummer" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblMaterialGruppe" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblTyp" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblBezeichnung" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblPreisInEuro" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblGrößeVE" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="txfBezeichnung" min="-2" pref="229" max="-2" attributes="0"/>
+                                          <Component id="cbxTyp" min="-2" pref="213" max="-2" attributes="0"/>
+                                          <Component id="txfMaterialAnlegen" min="-2" pref="164" max="-2" attributes="0"/>
+                                          <Component id="txfZeichnungsnummer" min="-2" pref="165" max="-2" attributes="0"/>
+                                          <Component id="txfGrößeVE" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
+                                          <Component id="txfPreisInEuro" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Component id="lblNeuesTeilAnlegen" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txfIdentnummer" min="-2" pref="117" max="-2" attributes="0"/>
-                                  <Component id="txfBezeichnung" min="-2" pref="229" max="-2" attributes="0"/>
-                                  <Component id="cbxTyp" min="-2" pref="213" max="-2" attributes="0"/>
-                                  <Component id="txfMaterialAnlegen" min="-2" pref="164" max="-2" attributes="0"/>
-                                  <Component id="txfZeichnungsnummer" min="-2" pref="165" max="-2" attributes="0"/>
-                                  <Component id="txfGrößeVE" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
-                                  <Component id="txfPreisInEuro" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
-                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -71,12 +72,7 @@
               <Component id="lblNeuesTeilAnlegen" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txfIdentnummer" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblIdentnummer" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txfBezeichnung" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblBezeichnung" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -106,7 +102,7 @@
                   <Component id="lblGrößeVE" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txfGrößeVE" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
               <Component id="btnanlegen" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
           </Group>
@@ -183,16 +179,6 @@
     <Component class="javax.swing.JTextField" name="txfPreisInEuro">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfPreisInEuroActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblIdentnummer">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Teil ID:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txfIdentnummer">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfIdentnummerActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnanlegen">
